kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-k8s
  labels:
    app.kubernetes.io/instance: hello-k8s
    app.kubernetes.io/name: hello-k8s
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: hello-k8s
      app.kubernetes.io/name: hello-k8s
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: hello-k8s
        app.kubernetes.io/name: hello-k8s
    spec:
      containers:
        - name: hello-k82
          image: vmostowoj/hello-k8s:0.0.2
          ports:
            - name: http
              protocol: TCP
              containerPort: 80
          resources:
            requests:
              cpu: 200m
              memory: 300Mi
            limits:
              memory: 500Mi
