kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-k8s
  labels:
    app.kubernetes.io/instance: hello-k8s
    app.kubernetes.io/name: hello-k8s
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: hello-k8s
    app.kubernetes.io/name: hello-k8s
  ports:
    - name: http
      protocol: TCP
      port: 80
